对性能进行优化，提高序列化处理速度

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>msgpack</artifactId>
+            <version>0.6.6</version>
+        </dependency>
     </dependencies>
 
     <build>
