--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>msgpack</artifactId>
             <version>0.6.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-buffer</artifactId>
+            <version>4.1.50.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
