对共享对象的存储进行改进，只需存引用索引，不需存对象类型，进一步降低码率

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>netty-buffer</artifactId>
             <version>4.1.50.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
